test/language/line-terminators/invalid-regexp-cr.js
// Copyright 2019 Mike Pennisi.  All rights reserved.
// This code is governed by the BSD license found in the LICENSE file.

/*---
esid: sec-line-terminators
description: >
    7.3 - ES5 recognizes the character <CR> (\u000D) as terminating
    regular expression literals
negative:
  phase: parse
  type: SyntaxError
---*/

$DONOTEVALUATE();

/
/
